--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'"
   },
-  "author": "",
+  "engines": {
+    "node": "8.2.1"
+  },
+  "author": "Nir Fiegelshtein",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
