--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: node_js
-sudo: false
-node_js:
-  - "node"
-install:
-  - npm install
-script:
-  - npm test
+                sudo: false
+                node_js:
+                  - "node"
+                before_script:
+                  - wget http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-2.6.11.tgz
+                  - tar -zxvf mongodb-linux-x86_64-2.6.11.tgz
+                  - mkdir -p ./data/db
+                  - ./mongodb-linux-x86_64-2.6.11/bin/mongod --fork --nopreallocj --dbpath ./data/db --syslog --port 27017
+                install:
+                    - npm install
+                script:
+                  - npm test
+                  - npm run lint
